change charcode from EUC-JP to UTF-8

--- a/mixfont-mplus-ipa/mplus2006_ipa2003/fonttest.html
+++ b/mixfont-mplus-ipa/mplus2006_ipa2003/fonttest.html
@@ -1,37 +1,37 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html lang="ja">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=shift_jis">
-<title>ƒeƒXƒg</title>
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+<title>ãƒ†ã‚¹ãƒˆ</title>
 <style type="text/css">
 p { margin:0; padding:0;}
 </style>
 </head>
 <body>
-<p>6 ` 28 pixel</p>
+<p>6 ã€œ 28 pixel</p>
 
-<p style="font-size:6px;">6 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:7px;">7  Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:8px;">8  Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:9px;">9  Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:10px;">10 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:11px;">11 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:12px;">12 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:13px;">13 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:14px;">14 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:15px;">15 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:16px;">16 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:17px;">17 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:18px;">18 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:19px;">19 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:20px;">20 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:21px;">21 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:22px;">22 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:23px;">23 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:24px;">24 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:25px;">25 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:26px;">26 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:27px;">27 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:28px;">28 Windows/Mac‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
+<p style="font-size:6px;">6 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:7px;">7  Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:8px;">8  Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:9px;">9  Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:10px;">10 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:11px;">11 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:12px;">12 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:13px;">13 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:14px;">14 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:15px;">15 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:16px;">16 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:17px;">17 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:18px;">18 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:19px;">19 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:20px;">20 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:21px;">21 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:22px;">22 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:23px;">23 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:24px;">24 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:25px;">25 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:26px;">26 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:27px;">27 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:28px;">28 Windows/Macã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
 </body>
 </html>
