--- a/mixfont-mplus-ipa/size.html
+++ b/mixfont-mplus-ipa/size.html
@@ -1,37 +1,37 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html lang="ja">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=shift_jis">
-<title>ƒeƒXƒg</title>
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+<title>ãƒ†ã‚¹ãƒˆ</title>
 <style type="text/css">
 p { margin:0; padding:0;}
 </style>
 </head>
 <body>
-<p>6 ` 28 pixel</p>
+<p>6 ã€œ 28 pixel</p>
 
-<p style="font-size:6px;">6 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:7px;">7 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:8px;">8 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:9px;">9 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:10px;">10 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:11px;">11 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:12px;">12 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:13px;">13 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:14px;">14 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:15px;">15 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:16px;">16 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:17px;">17 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:18px;">18 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:19px;">19 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:20px;">20 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:21px;">21 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:22px;">22 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:23px;">23 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:24px;">24 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:25px;">25 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:26px;">26 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:27px;">27 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
-<p style="font-size:28px;">28 Web‚ÅƒRƒ“ƒsƒ…[ƒ^‚Ì¢ŠE‚ªL‚ª‚è‚Ü‚·B</p>
+<p style="font-size:6px;">6 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:7px;">7 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:8px;">8 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:9px;">9 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:10px;">10 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:11px;">11 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:12px;">12 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:13px;">13 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:14px;">14 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:15px;">15 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:16px;">16 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:17px;">17 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:18px;">18 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:19px;">19 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:20px;">20 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:21px;">21 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:22px;">22 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:23px;">23 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:24px;">24 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:25px;">25 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:26px;">26 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:27px;">27 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
+<p style="font-size:28px;">28 Webã§ã‚³ãƒ³ãƒ”ãƒ¥ãƒ¼ã‚¿ã®ä¸–ç•ŒãŒåºƒãŒã‚Šã¾ã™ã€‚</p>
 </body>
 </html>
